# AMR_Robot

./: README.md  frames_2025-12-24_18.21.04.gv
src/: README.md
src/hardware/ldlidar_ros2/: README.md  README_CN.md
src/hardware/ldlidar_ros2/launch/: ld06.launch.py
src/hardware/ros2_astra_camera/astra_camera/: CMakeLists.txt  package.xml
src/hardware/ros2_astra_camera/astra_camera/scripts/: depth_to_color.py  format_output_camera_params.py  format_output_supported_video_modes.py
src/ldlidar_ros2/sdk/src/: log_module.cpp
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/config/: ekf.yaml  joint_names_amr_robot.SLDASM.yaml  my_nav_params.yaml  slam_params.yaml  wheels_robot_joint.yaml
src/my_robot_description/launch/: display.launch.py  gazebo.launch.py  mapping.launch.py  navigation.launch.py  real.launch.py  rsp.launch.py
src/my_robot_description/maps/: my_house_map.pgm  my_house_map.yaml  my_map.pgm  my_map.yaml  my_new_map.pgm  my_new_map.yaml
src/my_robot_description/mesh/: Tof_BL_link.STL  Tof_BR_link.STL  Tof_FL_link.STL  Tof_F_Link.STL  back_left_wheel_link.STL  back_right_wheel_link.STL  lidar_link.STL
src/my_robot_description/meshs/: Tof_FR_link.STL  base_link.STL  camera_link.STL  front_left_wheel_link.STL  front_right_wheel_link.STL  gps_link.STL
src/my_robot_description/rviz/: mapping.rviz  nav2_config.rviz
src/my_robot_description/scripts/: start_micro_ros.sh
src/my_robot_description/urdf/: amr_robot.SLDASM.csv  amr_robot.SLDASM.urdf  amr_robot.csv  amr_robot.urdf
src/robot_bringup/: CMakeLists.txt  HARDWARE_SPECIFICATIONS.md  package.xml
src/robot_bringup/ESP32_code/: Logs.md  falcon_amr_final.ino
src/robot_bringup/config/: 99-robot-serial.rules  ekf.yaml  lidar_config.yaml  nav2_params.yaml  setup_rules.sh  slam_params.yaml
src/robot_bringup/launch/: hardware.launch.py  navigation.launch.py  rsp.launch.py  slam.launch.py
src/robot_bringup/maps/: my_first_map.pgm  my_first_map.yaml
src/robot_bringup/scripts/: 99-robot-serial.rules  display.launch.py  full_robot.launch.py  gazebo.launch.py  mapping.launch.py  odom_bridge.py  rsp.launch.py
src/ros2_astra_camera/astra_camera/include/astra_camera/: constants.h  ros_param_backend.h
src/ros2_astra_camera/astra_camera/include/astra_camera/point_cloud_proc/: point_cloud_xyzrgb.h
src/ros2_astra_camera/astra_camera/scripts/: install.sh
src/ros2_astra_camera/astra_camera/src/: ros_param_backend.cpp
src/ros2_astra_camera/astra_camera_msgs/: package.xml
