<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>1.0.0</version>
  <description>The master orchestrator for the AMR project. Handles LiDAR, micro-ROS, Astra Pro Max, and sensor fusion.</description>
  <maintainer email="amr@todo.todo">Amr</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>my_robot_description</exec_depend>

  <exec_depend>ldlidar_ros2</exec_depend>
  <exec_depend>micro_ros_agent</exec_depend>
  <exec_depend>astra_camera</exec_depend>
  <exec_depend>astra_camera_msgs</exec_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>

  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>